--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -41,6 +41,10 @@ img {
     position: relative;
 }
 
+.nav-link.active {
+    font-weight: 500;
+}
+
 .nav-link::before {
     content: '';
     position: absolute;
