--- a/frontend/src/Components/HeroSection/HeroSection.css
+++ b/frontend/src/Components/HeroSection/HeroSection.css
@@ -34,7 +34,8 @@
 
 .hero-text-container button {
     padding: 10px 20px;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
     color: #fff;
     background-color: #333;
     border: none;
@@ -75,8 +76,9 @@
 .down-arrow {
     font-size: 40px;
     cursor: pointer;
+    color: #333;
 }
 
 .down-arrow:hover {
-    color: #333;
+    color: #555;
 }
