--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -35,9 +35,6 @@ img {
     padding: 0.8rem;
     border-radius: 8px;
     transition: all 0.3s ease;
-}
-
-.nav-link {
     position: relative;
 }
 
@@ -121,6 +118,13 @@ img {
     text-align: center;
     padding-left: 20px;
     padding-right: 20px;
+    text-decoration: none;
+    padding: 12px;
+    border-radius: 8px;
+}
+
+.login-link:hover {
+    background-color: #555;
 }
 
 @media (max-width: 900px) {
