Made footer links bold when active

--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -44,6 +44,10 @@
     color: black;
 }
 
+.footer-link.active {
+    font-weight: 500;
+}
+
 .footer-copyright {
     display: flex;
     flex-direction: column;
