--- a/frontend/src/Components/CategorySelection/CategorySelection.css
+++ b/frontend/src/Components/CategorySelection/CategorySelection.css
@@ -12,7 +12,7 @@
 }
 
 .products-categories {
-    width: 70%;
+    width: 60%;
     margin: auto;
     margin-top: 1.6rem;
     height: auto;
@@ -22,6 +22,7 @@
     flex-direction: column;
     border-radius: 14px;
     overflow: hidden;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .products-category {
@@ -36,17 +37,48 @@
     width: 50%;
 }
 
-.category-text {
-    flex: 1;
-}
-
 .category-image img {
     width: 100%;
     height: auto;
-    max-height: 400px;
+    max-height: 500px;
     object-fit: cover;
 }
 
 .category-text {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+}
+
+.category-text h3 {
+    font-size: 1.8rem;
+    color: #333;
+}
+
+.category-text p {
+    font-size: 1.2rem;
+    color: #667;
+    margin-top: 1.2rem;
+}
+
+.category-text button {
+    padding: 10px 20px;
+    margin-top: 1.4rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #fff;
+    background-color: #333;
+    border: none;
+    cursor: pointer;
+    border-radius: 8px;
+    width: 160px;
+    height: 50px;
+    transition: background-color 0.3s ease;
+}
+
+.category-text button:hover {
+    background-color: #555;
 }
