--- a/frontend/src/Components/OfferBanner/OfferBanner.css
+++ b/frontend/src/Components/OfferBanner/OfferBanner.css
@@ -11,7 +11,7 @@
     opacity: 0.9;
     padding: 1.4rem;
     text-align: center;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgba(128, 128, 128, 0.24);
 }
 
 .offer-banner p {
