--- a/frontend/src/Components/GenderSelection/GenderSelection.css
+++ b/frontend/src/Components/GenderSelection/GenderSelection.css
@@ -15,6 +15,7 @@
     width: 60%;
     margin: auto;
     margin-top: 1.6rem;
+    margin-bottom: 3rem;
     height: auto;
     max-height: fit-content;
     background-color: white;
