--- a/frontend/src/Components/ProductItem/ProductItem.css
+++ b/frontend/src/Components/ProductItem/ProductItem.css
@@ -1,9 +1,15 @@
 .product {
     background-color: white;
-    max-width: 260px;
+    min-width: 270px;
+    max-width: 270px;
     overflow: hidden;
     border-radius: 12px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    transition: all 0.3s;
+}
+
+.product:hover {
+    scale: 1.02;
 }
 
 .product h2 {
