--- a/frontend/src/Components/HeroSection/HeroSection.css
+++ b/frontend/src/Components/HeroSection/HeroSection.css
@@ -66,3 +66,51 @@
     object-fit: cover;
     border-radius: 20px 0 0 20px;
 }
+
+@media (max-width: 900px) {
+    .hero-section {
+        flex-direction: column-reverse;
+        padding: 0;
+    }
+
+    .hero-text-container h1 {
+        font-size: 2.5rem;
+    }
+
+    .hero-text-section {
+        text-align: center;
+    }
+
+    .hero-text-container h1 {
+        font-size: 2.5rem;
+    }
+
+    .hero-text-container p {
+        font-size: 1.2rem;
+    }
+
+    .hero-img-container {
+        width: 70%;
+        height: 400px;
+    }
+
+    .hero-img-container img {
+        height: 100%;
+        border-radius: 0 0 20px 20px;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 700px) {
+    .hero-text-container h1 {
+        font-size: 1.8rem;
+    }
+    .hero-img-container {
+        width: 100%;
+        height: 60vh;
+    }
+
+    .hero-img-container img {
+        border-radius: 0;
+    }
+}
