--- a/frontend/src/Components/TrendingProducts/TrendingProducts.css
+++ b/frontend/src/Components/TrendingProducts/TrendingProducts.css
@@ -33,3 +33,17 @@
     margin-top: 1.6rem;
     margin-bottom: 2rem;
 }
+
+@media (max-width: 700px) {
+    .trending-products-container .title {
+        font-size: 1.8rem;
+    }
+
+    .trending-products-container .trending-products-p {
+        font-size: 1.1rem;
+    }
+
+    .hr-1 {
+        max-width: 80%;
+    }
+}
