--- a/frontend/src/Components/InfoBox/InfoBox.css
+++ b/frontend/src/Components/InfoBox/InfoBox.css
@@ -26,3 +26,17 @@ hr {
     border-radius: 20px;
     border: none;
 }
+
+@media (max-width: 900px) {
+    hr {
+        display: none;
+    }
+    .info-box-container {
+        flex-wrap: wrap;
+        gap: 40px;
+    }
+
+    .info-box {
+        margin-bottom: 20px;
+    }
+}
