--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -68,7 +68,7 @@
 
 @media (max-width: 800px) {
     .footer {
-        gap: 20px;
+        gap: 2rem;
     }
 
     .footer-logo {
@@ -84,11 +84,12 @@
     }
 
     .footer-links {
-        gap: 10px;
-        font-size: 14px;
+        gap: 1.2rem;
     }
 
     .footer-copyright {
-        font-size: 13px;
+        font-size: 0.9rem;
+        border-top: 3px solid #eaeaea;
+        padding-top: 1.6rem;
     }
 }
