--- a/frontend/src/Components/BreadCrumbs/BreadCrumbs.css
+++ b/frontend/src/Components/BreadCrumbs/BreadCrumbs.css
@@ -26,3 +26,16 @@
 .house-icon {
     font-size: 18px;
 }
+
+@media (max-width: 500px) {
+    .breadcrumbs {
+        border-radius: 0;
+    }
+    .each-breadcrumb {
+        font-size: 0.8rem;
+    }
+
+    .house-icon {
+        font-size: 14px;
+    }
+}
