--- a/frontend/src/Components/GenderSelection/GenderSelection.css
+++ b/frontend/src/Components/GenderSelection/GenderSelection.css
@@ -52,6 +52,7 @@
     align-items: center;
     justify-content: center;
     flex: 1;
+    padding: 0 20px;
 }
 
 .category-text h3 {
@@ -87,6 +88,7 @@
 @media (max-width: 900px) {
     .products-categories {
         width: 80%;
+        margin-top: 0.6rem;
     }
 
     .category-text h3 {
@@ -101,7 +103,6 @@
 @media (max-width: 700px) {
     .products-title {
         font-size: 1.8rem;
-        margin-top: 0.6rem;
     }
 
     .products-p {
@@ -123,11 +124,14 @@
 
 @media (max-width: 500px) {
     .products-categories {
-        margin-top: 0.5rem;
+        margin-top: 1rem;
+        background-color: transparent;
+        gap: 1.2rem;
     }
     .products-category {
         flex-direction: column;
         padding-bottom: 1.6rem;
+        background-color: white;
     }
 
     .category-image {
