--- a/frontend/src/Components/SimilarProducts/SimilarProducts.css
+++ b/frontend/src/Components/SimilarProducts/SimilarProducts.css
@@ -25,3 +25,13 @@
     margin-top: 1.6rem;
     margin-bottom: 2rem;
 }
+
+@media (max-width: 700px) {
+    .similar-products-container h2 {
+        font-size: 1.7rem;
+    }
+
+    .similar-products-container p {
+        font-size: 1.1rem;
+    }
+}
