--- a/frontend/src/Pages/NotFoundPage/NotFoundPage.css
+++ b/frontend/src/Pages/NotFoundPage/NotFoundPage.css
@@ -1,4 +1,4 @@
-.container {
+.notfound-container {
     height: 100vh;
     width: 90%;
     margin: auto;
@@ -15,19 +15,19 @@
     color: #333;
 }
 
-.container h2 {
+.notfound-container h2 {
     font-size: 2rem;
     color: #333;
     margin-bottom: 6px;
 }
 
-.container p {
+.notfound-container p {
     font-size: 1.4rem;
     color: #667;
     font-weight: 500;
 }
 
-.container button {
+.notfound-container button {
     padding: 10px 20px;
     font-size: 1.2rem;
     font-weight: 500;
@@ -42,11 +42,24 @@
     transition: background-color 0.3s ease;
 }
 
-.container button:hover {
+.notfoundcontainer button:hover {
     background-color: #555;
 }
 
-.container .btn-link {
+.notfound-container .-notfound-btn-link {
     text-decoration: none;
     color: #fff;
+}
+
+@media (max-width: 600px) {
+    .notfound-container {
+        width: 89%;
+    }
+    .notfound-container h2 {
+        font-size: 1.6rem;
+    }
+
+    .notfound-container p {
+        font-size: 1.1rem;
+    }
 }
