Added error page for not found product via url search

--- a/frontend/src/Pages/NotFoundPage/NotFoundPage.css
+++ b/frontend/src/Pages/NotFoundPage/NotFoundPage.css
@@ -42,7 +42,7 @@
     transition: background-color 0.3s ease;
 }
 
-.notfoundcontainer button:hover {
+.notfound-container button:hover {
     background-color: #555;
 }
 
