--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -128,7 +128,19 @@ img {
     background-color: #555;
 }
 
-@media (max-width: 900px) {
+.admin-link-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.admin-icon {
+    font-size: 26px;
+    color: black;
+}
+
+@media (max-width: 1000px) {
     nav {
         padding-right: 2rem;
         padding-left: 10px;
