--- a/frontend/src/Pages/AdminPage/AdminPage.css
+++ b/frontend/src/Pages/AdminPage/AdminPage.css
@@ -61,7 +61,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
-@media screen and (max-width: 700px) {
+@media (max-width: 700px) {
     .admin-header-buttons-container button {
         padding: 0.8rem 0.6rem;
         font-size: 16px;
