--- a/frontend/src/Pages/AdminPage/AdminPage.css
+++ b/frontend/src/Pages/AdminPage/AdminPage.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem 2rem;
+    padding-right: 2rem;
 }
 .admin-logo {
     padding: 1rem;
