--- a/frontend/src/Components/CartPriceDetails/CartPriceDetails.css
+++ b/frontend/src/Components/CartPriceDetails/CartPriceDetails.css
@@ -24,6 +24,11 @@
     font-size: 1.2rem;
 }
 
+.old-shipping {
+    text-decoration: line-through;
+    margin-right: 5px;
+}
+
 .total-sum {
     border-top: 2px solid #667;
     margin-top: 1rem;
