--- a/frontend/src/Pages/GenderProducts/GenderProducts.css
+++ b/frontend/src/Pages/GenderProducts/GenderProducts.css
@@ -4,6 +4,73 @@
     text-align: center;
 }
 
+.products-sorting {
+    background-color: white;
+    padding: 1.4rem 2rem;
+    width: 60%;
+    margin: auto;
+    margin-top: 1.4rem;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    margin: auto;
+    width: 80%;
+    height: 58px;
+    background-color: #e9ecef;
+    border-radius: 8px;
+}
+
+.sorting-dropdowns label {
+    color: #333;
+}
+
+.sorting-dropdowns select {
+    padding: 8px 12px;
+    background-color: #e9ecef;
+    border: none;
+    border-radius: 8px;
+    margin-top: 4px;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.sorting-dropdowns select:focus {
+    outline: none;
+}
+
+.sorting-dropdowns select option {
+    background-color: #e9ecef;
+    color: #333;
+}
+
+.search-icon {
+    margin: 0px 30px;
+    font-size: 22px;
+    color: #333;
+}
+
+.search-bar input {
+    height: 40px;
+    width: 100%;
+    background-color: transparent;
+    font-size: 1.2rem;
+    border: none;
+    outline: none;
+}
+
+.sorting-dropdowns {
+    display: flex;
+    gap: 1rem;
+}
+
 .gender-products {
     display: flex;
     flex-wrap: wrap;
@@ -16,7 +83,35 @@
     max-width: 1400px;
 }
 
+@media (max-width: 1000px) {
+    .products-sorting {
+        width: 80%;
+        gap: 1rem;
+    }
+
+    .search-bar {
+        width: 90%;
+    }
+}
+
 @media (max-width: 700px) {
+    .products-sorting {
+        width: 90%;
+        padding: 1rem 1.4rem;
+        gap: 0.4rem;
+        flex-direction: column;
+    }
+
+    .search-bar {
+        width: 90%;
+        height: 42px;
+    }
+
+    .sorting-dropdowns {
+        width: 90%;
+        gap: 0rem;
+    }
+
     .gender-products-title {
         font-size: 1.8rem;
         margin-top: 0.6rem;
