--- a/frontend/src/Pages/GenderProducts/GenderProducts.css
+++ b/frontend/src/Pages/GenderProducts/GenderProducts.css
@@ -98,6 +98,7 @@
     .products-sorting {
         width: 90%;
         padding: 1rem 1.4rem;
+        margin-bottom: 1.2rem;
         gap: 0.4rem;
         flex-direction: column;
     }
